src/test/deca/avecObjet/valid/class_two_fields copy.deca
// Description :
//    Classe contenant deux champs de types différents.
//
// Resultats :
//    OK

class A {
    int x;
    float y;
}

{
}

