src/test/deca/avecObjet/invalid/duplicate_class_name.deca
// Description :
//    Deux classes portent le même nom.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 12 : Classe A déjà déclarée

class A {
    int x;
}

class A {
    int y;
}

{
}

